# gist-prototype

./: .gitignore  CMakeLists.txt  log.conf
src/benchmark/: benchmark.cxx  benchmark.h  main.cxx  timer.h
src/gist/: Entry.h  InnerEntry.h  LeafEntry.h  Node.h  entry.h  gist.cxx  gist.h  inner_entry.h  leaf_entry.h  node.h  predicate.h  predicate_holder.h
src/gist/predicates/: dummy_predicate.cxx  dummy_predicate.h
src/tests/: tests_0.cxx
